# party-ferris

./: README.md  party-ferris.cabal  stack.yaml
src/: Main.hs
