name:                party-ferris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/party-ferris#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-dir: images/

executable party-ferris
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: Paths_party_ferris
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -threaded
  build-depends:       base >= 4.7 && < 5
    , text
    , reanimate
    , reanimate-svg
    , bytestring
    , vector
    , double-conversion
    , JuicyPixels
    , filepath
    , lens
    , linear
